--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.21.0",
     "firebase": "^10.13.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-button": "^0.8.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.79.3",
     "sort-by": "^1.2.0"
   },
